feat(pi-web): Tools and results UI
